--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pizzeria Da Michele</title>
-  <link rel="stylesheet" href="Media query.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="title"><h1>Da Michele</h1></div>
